--- a/index.html
+++ b/index.html
@@ -1,53 +1,157 @@
 <!doctype html>
 <html>
-    <head>
-        <title>js-shapefile-to-geojson Demo Page</title>
-        <style>
-            html, body {
-                height: 100%;
-                width: 100%;
+
+<head>
+    <title>js-shapefile-to-geojson Demo Page</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+    crossorigin="" />
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Roboto', sans-serif;
+        }
+
+        #map {
+            height: 800px;
+            background-color: #eee;
+        }
+
+        .upload-input {
+            margin: 1rem;
+            background-color: #03A9F4;
+            color: #eee;
+            padding: 0.5rem;
+            border-radius: 0.2rem;
+            border-width: 0;
+        }
+
+        #loading {
+            background-color: #E5EFF1;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            z-index: 999999;
+            opacity: 0.6;
+        }
+
+        .loading-img {
+            width: 6rem;
+            height: 6rem;
+            margin: 0 auto;
+            display: block;
+        }
+
+        .error-message {
+            position: absolute;
+            width: 100%;
+            height: 1.5rem;
+            background-color: #F44336;
+            color: #FFFFFF;
+            top: 0;
+            text-align: center;
+            padding: 1rem;
+            font-size: 1.4rem;
+        }
+    </style>
+</head>
+
+<body>
+    <div id="loading" style="display: none;">
+        <img class="loading-img" src="https://media1.giphy.com/media/xTk9ZvMnbIiIew7IpW/giphy.gif" alt="">
+    </div>
+    <div id="map"></div>
+    <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyAQrAin98m7Nna6UEN7qpMDKp1X3Uxh0pA"></script>
+    <script src="/node_modules/@inlog/inlog-maps/lib/inlogMaps.js"></script>
+    <script src="/node_modules/leaflet.path.drag/src/Path.Drag.js"></script>
+    <script src="/node_modules/leaflet-editable/src/Leaflet.Editable.js"></script>
+    <script src="stream.js"></script>
+    <script src="shapefile.js"></script>
+    <script src="dbf.js"></script>
+
+    <div class="error-message" style="display: none;"></div>
+
+    <input id="image-file" class="upload-input" type="file" accept=".shp,.dbf" multiple enctype="multipart/form-data" />
+    <script type="text/javascript">
+
+        const map = new inlogMaps.Map('Google');
+
+        document.getElementById('image-file').addEventListener('change', importFiles, false);
+        function importFiles(data) {
+            showLoading();
+            var files = Array.from(data.target.files);
+            if (files.map(x => x.name.substr(x.name.lastIndexOf('.'), x.name.length)).find(x => !(x === '.shp' || x === '.dbf'))) {
+                showMessage('São permitidos apenas os arquivos no formato .shp ou .dbf');
+                return;
             }
-            #map {
-                height: 400px;
-                background-color: #eee;
+            var filesGroupedByName = groupBy(files, (shapeFile) => shapeFile.name.substr(0, shapeFile.name.lastIndexOf('.')));
+            var fileShapes = [];
+            if (filesGroupedByName.size) {
+                filesGroupedByName.forEach(x => {
+                    var name = x.find(x => x.name).name;
+                    name = name.substr(0, name.lastIndexOf('.'));
+
+                    var shpFile = x.find(x => x.name === `${name}.shp`);
+                    var dbfFile = x.find(x => x.name === `${name}.dbf`);
+                    
+                    if(!shpFile && dbfFile){
+                        showMessage('Para cada arquivo .dbf deve existir um .shp com o mesmo nome');
+                        return;
+                    }
+
+                    fileShapes.push(new Shapefile({
+                        shp: shpFile,
+                        dbf: dbfFile
+                    }, afterParseFileShape));
+                });
+            } else {
+                showMessage('É necessário ao menos selecionar 1 arquivo shp');
             }
-        </style>
-    </head>
-    <body>
-         <a href="http://github.com/wavded/js-shapefile-to-geojson"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
-        <h2>js-shapefile-to-geojson Demo Page</h2>
-        <p>Pure client-side JavaScript (no server side code) parsing of shapefiles and dbase files to GeoJSON format displayed using OpenLayers.</p>
-        <div id="map"></div>
-        <p>View project at <a href="http://github.com/wavded/js-shapefile-to-geojson">http://github.com/wavded/js-shapefile-to-geojson</a>.
-        <script src="http://rs1.adc4gis.com/js/openlayers/2.9.1/OpenLayers-Proj4.js"></script>
-        <script src="stream.js"></script>
-        <script src="shapefile.js"></script>
-        <script src="dbf.js"></script>
-        <script type="text/javascript">
-            OpenLayers._getScriptLocation = function(){
-                return "http://rs1.adc4gis.com/js/openlayers/2.9.1/";
-            };
+        }
 
+        function groupBy(list, keyGetter) {
+            const map = new Map();
+            list.forEach((item) => {
+                const key = keyGetter(item);
+                const collection = map.get(key);
+                if (!collection) {
+                    map.set(key, [item]);
+                } else {
+                    collection.push(item);
+                }
+            });
+            return map;
+        }
 
-            var starttime = +new Date,
-                map = new OpenLayers.Map("map",{allOverlays: true}),
-                parser = new OpenLayers.Format.GeoJSON(),
-                vector = new OpenLayers.Layer.Vector("Converted"),
+        function afterParseFileShape(data) {
+            if (data.geojson) {
+                let options = {
+                    draggable: false,
+                    editable: false
+                };
+                map.loadGEOJson(data.geojson, options, () => { });
+            }
+            hideLoading();
+        }
 
-                shapefile = new Shapefile({
-                    shp: "testdata/world.shp",
-                    dbf: "testdata/world.dbf"
-                }, function(data){
-                    var features = parser.read(data.geojson);
-                    vector.addFeatures(features);
-                    map.zoomToExtent(vector.getDataExtent());
+        function showMessage(text) {
+            var errorMessage = document.getElementsByClassName('error-message')[0]
+            errorMessage.innerHTML = text;
+            errorMessage.style.display = 'block';
+            hideLoading();
+            setTimeout(x => {
+                errorMessage.style.display = 'none';
+            }, 4000);
+        }
 
-                    console.log("took",new Date - starttime,"milliseconds")
-                    console.log(data);
-                })
+        function hideLoading() {
+            document.getElementById('loading').style.display = 'none';
+        }
 
-            map.addLayer(vector);
-        </script>
-    </body>
+        function showLoading() {
+            document.getElementById('loading').style.display = 'block';
+        }
+    </script>
+</body>
+
 </html>
-
